api gateaway and specification added